2022-08-14 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Delete children records when none is present in import data, resolves #232
	* Ensure strict typing when reading TCE log, resolves #246 (thanks to Timo Webler)

2022-07-21 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix DBAL compatibility issue (thanks to Regis Tedone)

2022-05-13 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Improve documentation (thanks to Lina Wolf)

2021-12-17 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix path to Datatables library, resolves #225 (thanks to Oliver Hader)
	* Add compatibility layer for different versions of symfony/dbal, resolves #214
	* Release version 6.0.3

2021-12-15 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Avoid overriding existing table garbage collection task setup, resolves #224
	* Add custom steps during validation to allow reference between custom steps, resolves #220
	* Add note about RTE transformations for rich-text fields, resolves #221
	* Release version 6.0.2

2021-12-11 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Consider "uniqueInTable" condition when upating slugs, references #195

2021-11-26 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix and enhance arrayPath property, improve tests and documentation, resolves #216
	* Prepend debug messages with "External Import", resolves #217

2021-11-24 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure data sent to log is an array

2021-11-19 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix access to undefined array keys

2021-11-18 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 6.0.1

2021-11-14 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Log message when record with empty value is dropped, references #209

2021-11-13 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix access to undefined array keys
	* Fix test classes setUp method signature
	* Update handling of exceptions in test classes